# gocam-curator

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  gocam_tool_architecture.md  pyproject.toml
data/: ~$annotations.xlsx
data/syngo/: README.md
google-cloud-sdk/.install/: gcloud-crc32c-darwin-arm.snapshot.json
processes/AMPAR/: meta.json
processes/AMPAR-endo2/: meta.json  pipeline_log.txt
processes/AMPAR-endo2/evidence_records/: records.json
processes/AMPAR-endo2/extractions/: Ampar_endocytosis.json  Ampar_endocytosis_p2.json  REPORT.md  SynGO3 intro and postsyn-prep Breakout V1.0_p2.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide03.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide05.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide06.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide07.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide08.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide09.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide10.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide11.json  SynGO3 intro and postsyn-prep Breakout V1.0_slide12.json  ampar_pdf_p2.json  ampar_pdf_summary.json  (+64 more)
processes/AMPAR-endocytosis/: meta.json  pipeline_log.txt
processes/test-synapse/: meta.json
prompts/: extract.md  extract_deep.md  extract_text.md  extract_text_old.md  gocam_builder_prompt_v3.md  interpret.md  narrative.md  report.md  system.md  translate.md
prompts/old_prompts/: extract_slides.md  extract_text.md  extract_visual.md  narrative.md  report.md
src/gocam/: __init__.py  cli.py  config.py
(+140 files in other folders)
